Select: Fix background color for multi.

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -59,6 +59,7 @@
 
       .Select-value {
         padding: 0;
+        background-color: @neutral_off_white !important;
         border-color: @neutral_silver;
         color: @neutral_black;
         line-height: @size_m;
