Adds required option to Select component
Adds the option for Select components to be required. Unsure about the
positioning of the "REQUIRED" label, but it currently mimics the
TextInput positioning.

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -14,14 +14,19 @@
   top: @size_xs;
   width: 100%;
 
-  &.Select--labelHidden {
-    opacity: 0 !important;
+  .Select--required {
+    position: absolute;
+    right: @size_l;
   }
 }
 
 .Select--label {
   left: @size_s;
   position: absolute;
+
+  &.Select--labelHidden {
+    opacity: 0 !important;
+  }
 }
 
 .Select--ReactSelect {
