Increase right margin of Wizard sidebar steps icon

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -122,7 +122,7 @@
   background-image: url("../../assets/images/progress_notStarted.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  .margin--right--2xs;
+  .margin--right--s;
 }
 
 .Wizard--WizardStep--component {
