Force tooltip to use Proxima Nova

--- a/src/Tooltip/Tooltip.less
+++ b/src/Tooltip/Tooltip.less
@@ -10,6 +10,8 @@
   word-break: break-all;
   // Better breaking for webkit browsers (non-IE, basically):
   word-break: break-word;
+  font-family: "Proxima Nova";
+  .text--medium;
 }
 
 .Tooltip--content--center {
