SegmentedControl fixes/updates.
- Fix bug where the control is unresponsive to clicks when the explicit value is changed by the parent and the internal state goes out of sync.
- Also, prevent the buttons from wrapping - ends up looking weird in some UIs that are using flex styling.

--- a/src/SegmentedControl/SegmentedControl.less
+++ b/src/SegmentedControl/SegmentedControl.less
@@ -2,6 +2,8 @@
 @import "../less/fonts.less";
 
 .segmented_control {
+  white-space: nowrap;
+
   .segmented_control--selectable-item {
     background-color: @neutral_white;
     border: 1px solid @neutral_silver;
