--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -22,6 +22,7 @@ a, button {
   &.Button {
     .border--s(transparent);
     .borderRadius--top--m;
+    .borderRadius--bottom--0;
     // Safari weirdly adds margins to adjacent buttons. Reset that:
     .margin--none;
     .padding--none;
