added border-radius 0 to reset and then used button reset

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -20,9 +20,9 @@
 
 a, button {
   &.Button {
+    .button--reset;
     .border--s(transparent);
     .borderRadius--top--m;
-    .borderRadius--bottom--0;
     // Safari weirdly adds margins to adjacent buttons. Reset that:
     .margin--none;
     .padding--none;
