--- a/src/less/resets.less
+++ b/src/less/resets.less
@@ -1,9 +1,9 @@
 @import (reference) "./animations";
 
-
 .button--reset {
   background: none;
   border: 0;
+  border-radius: 0;
   cursor: pointer;
   font: inherit;
   margin: 0;
