fix Chrome breaking design choices (#243)
* fix Chrome breaking design choices

* 0.26.4

* added border-radius 0 to reset and then used button reset

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -20,6 +20,7 @@
 
 a, button {
   &.Button {
+    .button--reset;
     .border--s(transparent);
     .borderRadius--top--m;
     // Safari weirdly adds margins to adjacent buttons. Reset that:
