specifying background color when hovering

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -85,6 +85,7 @@ a, button {
     &:active {
       .shade(border-color, @primary_blue, 2);
       .shade(color, @primary_blue, 2);
+      background-color: @neutral_off_white;
     }
   }
 
