Add component implementation/styling

--- a/docs/components/GoalsLogoView.less
+++ b/docs/components/GoalsLogoView.less
@@ -4,6 +4,13 @@
   .margin--bottom--xl;
 }
 
+.GoalsLogoView--logoContainer {
+  .borderRadius--m();
+  .padding--x--l;
+  .padding--y--xs;
+  background-color: @primary_blue;
+}
+
 .GoalsLogoView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
