--- a/src/GoalsLogo/GoalsLogo.less
+++ b/src/GoalsLogo/GoalsLogo.less
@@ -1,15 +1,28 @@
 @import (reference) "../less/utilities";
+@import "../less/fonts";
 
 .GoalsLogo {
-  .border--s(@neutral_silver);
-  .borderRadius--m;
-  .padding--m;
-  background-color: @neutral_off_white;
+  .font--ProximaNova();
+  color: @neutral_white;
+  display: inline-block;
+  line-height: 1;
+  transition: all @timingPromptly ease-out;
 }
 
-.GoalsLogo--subElement {
-  .border--s(@neutral_silver);
-  .padding--s;
+.GoalsLogo--text {
+  letter-spacing: -0.05em;
+}
+
+.GoalsLogo--progressBar {
+  @height: 0.2em;
   background-color: @neutral_white;
-  text-align: right;
+  border-radius: @height / 2;
+  height: @height;
+  overflow: hidden;
+}
+
+.GoalsLogo--progressBar--inner {
+  background-color: @alert_green;
+  height: 100%;
+  width: 60%;
 }
