--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,3 +1,7 @@
+.font--ProximaNova {
+  font-family: "Proxima Nova", "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+
 @font-face {
   font-family: 'Proxima Nova';
   src: url('../../assets/fonts/ProximaNova-Light-webfont.woff');
