--- a/src/GoalsLogo/GoalsLogo.less
+++ b/src/GoalsLogo/GoalsLogo.less
@@ -6,7 +6,8 @@
   color: @neutral_white;
   display: inline-block;
   line-height: 1;
-  // Add bottom weighting to match the leading vertical space due to excess line-height to visually center the logo.
+  // Add bottom weighting to match the leading vertical space due to excess line-height to visually
+  // center the logo.
   margin-bottom: 0.125em;
   transition: all @timingPromptly ease-out;
 }
