Replace placeholder Goals logo with SVG asset.

--- a/docs/components/GoalsLogoView.less
+++ b/docs/components/GoalsLogoView.less
@@ -7,7 +7,7 @@
 .GoalsLogoView--logoContainer {
   .borderRadius--m();
   .padding--x--l;
-  .padding--y--xs;
+  .padding--y--m;
   background-color: @primary_blue;
 }
 
