--- a/components/TableView.less
+++ b/components/TableView.less
@@ -10,3 +10,12 @@
   display: inline-block;
   text-transform: uppercase;
 }
+
+.TableView--status {
+  transition: all @timingPromptly ease-out;
+}
+
+.TableView--status--red {
+  background-color: @alert_red;
+  color: @neutral_white;
+}
