--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -1,29 +1,63 @@
 // Primary colors:
-@primary_blue: #4274f6;
+@primary_blue: #2E00D9 ;
+@primary_blue_shade_1: #0500B0 ;
+@primary_blue_shade_2: #000087 ;
+@primary_blue_tint_1: #3E14FA ;
+@primary_blue_tint_2: #473DFF ;
 
 // Neutral colors:
-@neutral_black: #191926;
-@neutral_dark_gray: #566279;
-@neutral_gray: #b5bcca;
-@neutral_silver: #e3e6eb;
-@neutral_off_white: #fafafc;
-@neutral_white: #fff;
+@neutral_black: #15131C ;
+@neutral_dark_gray: #474C5E ;
+@neutral_gray: #71738A ;
+@neutral_silver: #D6D7DE ;
+@neutral_off_white: #FBFAFC ;
+@neutral_white: #FFFFFF ;
 
 // Alert colors:
-@alert_green: #01D59A;
-@alert_orange: #FCA53A;
-@alert_red: #EB3B49;
+@alert_green: #009E78 ;
+@alert_green_shade_1: #00754F ;
+@alert_green_shade_2: #004C26 ;
+@alert_green_tint_1: #14B28C ;
+@alert_green_tint_2: #3DDBB5 ;
+
+@alert_orange: #ED8A00 ;
+@alert_orange_shade_1: #D97600 ;
+@alert_orange_shade_2: #B04D00 ;
+@alert_orange_tint_1: #FF9E14 ;
+@alert_orange_tint_2: #FFC73D ;
+
+@alert_red: #DE004B ;
+@alert_red_shade_1: #CA0037 ;
+@alert_red_shade_2: #A1000E ;
+@alert_red_tint_1: #F51152 ;
+@alert_red_tint_2: #FF4268 ;
 
 // Secondary colors:
-@accent_aqua: #33F7F1;
-@accent_pink: #E838BF;
-@accent_purple: #7E1DFF;
+@accent_teal: #00C7C7 ;
+@accent_teal_shade_1: #00B3B3 ;
+@accent_teal_shade_2: #008A8A ;
+@accent_teal_tint_1: #14DBDB ;
+@accent_teal_tint_2: #29F0F0 ;
 
+@accent_aqua: @accent_teal; // to do: deprecate
 
+@accent_pink: #F70099 ;
+@accent_pink_shade_1: #E30085 ;
+@accent_pink_shade_2: #BA005C ;
+@accent_pink_tint_1: #FF29AE ;
+@accent_pink_tint_2: #FF52CE ;
+
+@accent_purple: #8000FF ;
+@accent_purple_shade_1: #6C00EB ;
+@accent_purple_shade_2: #4E00C2 ;
+@accent_purple_tint_1: #9414FF ;
+@accent_purple_tint_2: #BD3DFF ;
+
+// to do: deprecate
 @shadeStepAmount: 15%;
 .shade(@property, @color, @steps: 1) {
-  @{property}: shade(@color, @shadeStepAmount * @steps);
+ @{property}: shade(@color, @shadeStepAmount * @steps);
 }
 .tint(@property, @color, @steps: 1) {
-  @{property}: tint(@color, @shadeStepAmount * @steps);
+ @{property}: tint(@color, @shadeStepAmount * @steps);
 }
