update dropdown button to use new colors

--- a/src/DropdownButton/DropdownButton.less
+++ b/src/DropdownButton/DropdownButton.less
@@ -19,6 +19,7 @@
   .flex(0, 0);
   .margin--left--xs;
   // Padding will be re-applied on the child Caret--container element.
+  .margin--left--xs;
   .padding--x--none;
   box-sizing: content-box;
 }
