--- a/src/DropdownButton/Menu.less
+++ b/src/DropdownButton/Menu.less
@@ -32,14 +32,14 @@
 // Reset the disabled border styles for the secondary button's left and right borders, so it they
 // match those of the siblings in the menu.
 .Button--secondary.DropdownButton--Option[disabled] {
-  .border--x--s(@primary_blue);
-  .border--bottom--s(@primary_blue);
+  .border--x--s(@primary_blue_tint_2);
+  .border--bottom--s(@primary_blue_tint_2);
 
   &:active,
   &:focus,
   &:hover {
-    .border--x--s(@primary_blue);
-    .border--bottom--s(@primary_blue);
+    .border--x--s(@primary_blue_tint_2);
+    .border--bottom--s(@primary_blue_tint_2);
   }
 }
 
