bold title of infopanels

--- a/src/InfoPanel/InfoPanel.less
+++ b/src/InfoPanel/InfoPanel.less
@@ -30,7 +30,7 @@
 }
 
 .InfoPanel--title {
-  .text--regular;
+  .text--semi-bold;
   color: @neutral_dark_gray;
   font-family: "Proxima Nova";
   .margin--none;
