--- a/src/less/flex.less
+++ b/src/less/flex.less
@@ -265,6 +265,8 @@
 
 .flex--direction--column { .flexDirection(column) }
 
+.flex--direction--row { .flexDirection(row) }
+
 .flex--wrap { .flexWrap(wrap) }
 
 .flex--nowrap { .flexWrap(nowrap) }
