Added tests and addressed comments

--- a/src/InfoPanel/InfoPanel.less
+++ b/src/InfoPanel/InfoPanel.less
@@ -22,9 +22,6 @@
   }
 }
 
-.InfoPanel--collapsible {
-}
-
 .InfoPanel--content {
   background-color: @neutral_white;
   padding: @size_s @size_m;
@@ -42,7 +39,7 @@
   .text--regular;
   color: @neutral_dark_gray;
   font-family: "Proxima Nova";
-  margin: 0;
+  .margin--none;
   padding: @size_s @size_m;
   display: block;
 }
