--- a/src/InfoPanel/InfoPanel.less
+++ b/src/InfoPanel/InfoPanel.less
@@ -1,7 +1,6 @@
 @import (reference) "../less/utilities";
 @import (reference) "../less/index";
 
-
 .InfoPanel {
   .borderRadius--m;
   .border--s(@neutral_silver);
@@ -22,9 +21,22 @@
   }
 }
 
-.InfoPanel--content {
-  background-color: @neutral_white;
+.InfoPanel--header {
+  .border--bottom--s(@neutral_silver);
+  background-color: @neutral_off_white;
   padding: @size_s @size_m;
+}
+
+.InfoPanel--title {
+  .text--regular;
+  color: @neutral_dark_gray;
+  font-family: "Proxima Nova";
+  margin: 0;
+  padding: 0;
+}
+
+.InfoPanel--content {
+  padding: @size_m;
 }
 
 .InfoPanel--footer {
@@ -32,7 +44,7 @@
   padding: @size_s @size_m;
 }
 
-.InfoPanel--headerOpen {
+.InfoPanel--collapsibleHeader {
   background-color: @neutral_off_white;
   .border--bottom--s(@neutral_silver);
   padding: @size_s @size_m;
@@ -44,18 +56,7 @@
   display: block;
 }
 
-.InfoPanel--headerClosed {
-  background-color: @neutral_off_white;
-  padding: @size_s @size_m;
-  .text--regular;
-  color: @neutral_dark_gray;
-  font-family: "Proxima Nova";
-  margin: 0;
-  padding: @size_s @size_m;
-  display: block;
-}
-
-.InfoPanel--title {
+.InfoPanel--collapsibleTitle {
   display: inline-block;
 }
 
@@ -63,3 +64,18 @@
   width: @size_s;
   display: inline-block;
 }
+
+
+// classes picked up by react-accessible-accordion to show
+// and hide content
+.accordion__body {
+    display: block;
+    animation: fadein .35s ease-in;
+}
+
+.accordion__body--hidden {
+    display: none;
+    opacity: 0;
+    animation: fadein .35s ease-in;
+}
+
