Addressing more comments

--- a/src/InfoPanel/InfoPanel.less
+++ b/src/InfoPanel/InfoPanel.less
@@ -31,8 +31,8 @@
   .text--regular;
   color: @neutral_dark_gray;
   font-family: "Proxima Nova";
-  margin: 0;
-  padding: 0;
+  .margin--none;
+  .padding--none;
 }
 
 .InfoPanel--content {
