Update Goals logo
- Add updated SVG with progress bar further along.
- Include version of logo with "Clever" modifier.

TODO later:
- Add options for switching text color in the logo.

--- a/src/GoalsLogo/GoalsLogo.less
+++ b/src/GoalsLogo/GoalsLogo.less
@@ -9,3 +9,9 @@
   height: 1em;
   transition: all @timingPromptly ease-out;
 }
+
+.GoalsLogo--image--withClever {
+  // Bump up the size-to-height ratio a bit to account for the fact that the "Clever" logo is
+  // included in the total height.
+  height: 1.5em;
+}
