--- a/docs/components/GoalsLogoView.less
+++ b/docs/components/GoalsLogoView.less
@@ -11,6 +11,12 @@
   background-color: @primary_blue;
 }
 
+.GoalsLogoView--logoContainer--white {
+  border-bottom: @size_s solid @accent_purple;
+  border-radius: 0;
+  background-color: @neutral_off_white;
+}
+
 .GoalsLogoView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
