Update Goals logo
- Add updated SVG with progress bar further along.
- Include version of logo with "Clever" modifier.

TODO later:
- Add options for switching text color in the logo.

--- a/components/GoalsLogoView.less
+++ b/components/GoalsLogoView.less
@@ -11,6 +11,12 @@
   background-color: @primary_blue;
 }
 
+.GoalsLogoView--logoContainer--white {
+  border-bottom: @size_s solid @accent_purple;
+  border-radius: 0;
+  background-color: @neutral_off_white;
+}
+
 .GoalsLogoView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
