fix CSS for select

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -123,6 +123,9 @@
     .Select-input {
       position: absolute;
     }
+    .Select-input:focus {
+      background: transparent;
+    }
   }
 
   // overrides styles from the exact same selector in react-select's CSS
