make the content pane take up the max size

--- a/src/InfoPanel/InfoPanel.less
+++ b/src/InfoPanel/InfoPanel.less
@@ -5,6 +5,8 @@
   .borderRadius--m;
   .border--s(@neutral_silver);
   background-color: @neutral_white;
+  .flexbox();
+  .flexDirection(column);
 
   .InfoPanelColumn {
     display: inline-block;
@@ -37,6 +39,7 @@
 
 .InfoPanel--content {
   padding: @size_m;
+  .flex--auto;
 }
 
 .InfoPanel--footer {
