--- a/src/List/Item.less
+++ b/src/List/Item.less
@@ -13,7 +13,7 @@
   padding: 0;
 
   &:hover {
-    background-color: @neutral_off_white;
+    .tint(background-color, @neutral_silver, 5);
   }
 }
 
