--- a/src/List/Item.less
+++ b/src/List/Item.less
@@ -2,26 +2,27 @@
 @import (reference) "../Table/Cell";
 
 .List--Item {
-  // Match the Table component's cell styling.
-  .Table--cell();
   border-color: @neutral_silver;
   list-style: none;
   transition: all @timingPromptly ease-out;
 }
 
-.List--Item--Clickable {
-  padding: 0;
+.List--Item--ContentWrapper {
+  // Match the Table component's cell styling.
+  .Table--cell();
 
-  &:hover {
-    .tint(background-color, @neutral_silver, 5);
-  }
+  width: 100%;
 }
 
-.List--Item--ClickableItem {
+.List--Item--ContentWrapperClickable {
   .button--reset;
 
   // Match the Table component's cell styling.
   .Table--cell();
+
+  &:hover {
+    .tint(background-color, @neutral_silver, 5);
+  }
 }
 
 .List--empty {
