add onClick to list item (#266)
* add onClick to list item

* more accessible onclick changes

* use tint

* optional class name for items container

* PR comments

* cleanup

* use !! for boolean

* lint

* patch version bump

--- a/src/List/Item.less
+++ b/src/List/Item.less
@@ -2,11 +2,26 @@
 @import (reference) "../Table/Cell";
 
 .List--Item {
-  // Match the Table component's cell styling.
-  .Table--cell();
   border-color: @neutral_silver;
   list-style: none;
   transition: all @timingPromptly ease-out;
+}
+
+.List--Item--ContentWrapper {
+  // Match the Table component's cell styling.
+  .Table--cell();
+  width: 100%;
+}
+
+.List--Item--ContentWrapperClickable {
+  .button--reset;
+
+  // Match the Table component's cell styling.
+  .Table--cell();
+
+  &:hover {
+    .tint(background-color, @neutral_silver, 5);
+  }
 }
 
 .List--empty {
