--- a/src/DropdownButton/Menu.less
+++ b/src/DropdownButton/Menu.less
@@ -16,12 +16,14 @@
   .text--left;
   border-bottom-width: @borderWidthS;
 
-  &not(:first-child) {
+  &:not(:first-child) {
     border-top: 0;
   }
+
   &:first-child {
     .borderRadius--top--s;
   }
+
   &:last-child {
     .borderRadius--bottom--s;
   }
@@ -30,14 +32,14 @@
 // Reset the disabled border styles for the secondary button's left and right borders, so it they
 // match those of the siblings in the menu.
 .Button--secondary.DropdownButton--Option[disabled] {
-  .border--x--s(@primary_blue_tint_2);
-  .border--bottom--s(@primary_blue_tint_2);
+  .border--x--s(@primary_blue);
+  .border--bottom--s(@primary_blue);
 
   &:active,
   &:focus,
   &:hover {
-    .border--x--s(@primary_blue_tint_2);
-    .border--bottom--s(@primary_blue_tint_2);
+    .border--x--s(@primary_blue);
+    .border--bottom--s(@primary_blue);
   }
 }
 
