--- a/src/DropdownButton/Menu.less
+++ b/src/DropdownButton/Menu.less
@@ -3,6 +3,7 @@
 
 .DropdownButton--Menu {
   .margin--none;
+  .margin--top--xs;
   .padding--none;
   .zIndex--2;
   box-shadow: 0 0 @size_xs rgba(0, 0, 0, .15);
@@ -13,8 +14,15 @@
 .Button.DropdownButton--Option {
   .borderRadius--0;
   .text--left;
-  border-top: 0;
   border-bottom-width: @borderWidthS;
+
+  &:not(:first-child) {
+    border-top: 0;
+  }
+
+  &:first-child {
+    .borderRadius--top--s;
+  }
 
   &:last-child {
     .borderRadius--bottom--s;
