Fix List Item width styling.
Recent change added 100% width to the list item contents, which extends it past its parent bounds.

Issue wasn't visible in Dewey because there was a top-level `box-sizing: border-box` applied to all elements in Dewey. Took that out so that components build in Dewey don't make assumptions about the base styling clients are using.

--- a/docs/components/TopBar/TopBar.less
+++ b/docs/components/TopBar/TopBar.less
@@ -3,6 +3,7 @@
 
 .TopBar {
   background-color: @primary_blue;
+  box-sizing: border-box;
   color: @neutral_white;
   height: @size_5xl;
   padding: 0 @size_m 0 0;
@@ -10,6 +11,7 @@
 
 .TopBar--homeLink {
   background-color: @primary_blue;
+  box-sizing: border-box;
   height: 100%;
   padding: 0 @size_m @size_3xs;
   transition: background-color .25s ease-out;
