--- a/src/List/Item.less
+++ b/src/List/Item.less
@@ -10,6 +10,7 @@
 .List--Item--ContentWrapper {
   // Match the Table component's cell styling.
   .Table--cell();
+  box-sizing: border-box;
   width: 100%;
 }
 
