remove vendor directory

--- a/src/DatePicker/DatePicker.less
+++ b/src/DatePicker/DatePicker.less
@@ -1,5 +1,5 @@
 @import (reference) "../less/index";
-@import "../../vendor/react-datepicker/dist/react-datepicker.min.css";
+@import "~react-datepicker/dist/react-datepicker.min.css";
 
 .DatePicker {
   .borderRadius--0;
