--- a/src/DateInput/DateInput.less
+++ b/src/DateInput/DateInput.less
@@ -4,7 +4,7 @@
 @import (reference) "../less/type-size";
 @import (reference) "../less/type-utilities";
 @import (reference) "../less/spacing";
-@import "../../vendor/react-datetime/react-datetime.css";
+@import "~react-datetime/css/react-datetime.css";
 
 .DateInput {
   .padding--x--s;
