[FlexBox] Add noShrink option to the FlexItem

--- a/src/less/flex.less
+++ b/src/less/flex.less
@@ -273,6 +273,8 @@
 
 .flex--none { .flexNone() }
 
+.flex--noShrink { .flexShrink(0) }
+
 .flex--shrink { .flexShrink(1) }
 
 .items--baseline { .alignItems(baseline) }
