Better formatting for inline code elements.

--- a/docs/components/Layout.less
+++ b/docs/components/Layout.less
@@ -90,8 +90,13 @@ a {
 }
 
 code {
+  .padding--x--2xs;
+  .padding--y--4xs;
   .text--monospace;
-  background-color: @neutral_off_white;
+  .text--small;
+  background-color: tint(@accent_pink, 95%);
+  color: @accent_pink;
+  display: inline-block;
 }
 
 img {
