--- a/components/TopBar/TopBar.less
+++ b/components/TopBar/TopBar.less
@@ -3,6 +3,7 @@
 
 .TopBar {
   background-color: @primary_blue;
+  box-sizing: border-box;
   color: @neutral_white;
   height: @size_5xl;
   padding: 0 @size_m 0 0;
@@ -10,6 +11,7 @@
 
 .TopBar--homeLink {
   background-color: @primary_blue;
+  box-sizing: border-box;
   height: 100%;
   padding: 0 @size_m @size_3xs;
   transition: background-color .25s ease-out;
