--- a/docs/components/TopBar/TopBar.less
+++ b/docs/components/TopBar/TopBar.less
@@ -10,7 +10,7 @@
 }
 
 .TopBar--homeLink {
-  background-color: @neutral_off_white;
+  box-sizing: border-box;
   height: 100%;
   padding: 0 @size_m @size_3xs;
 }
