--- a/src/less/border.less
+++ b/src/less/border.less
@@ -11,6 +11,7 @@
 @borderWidthS: .0625rem;  /* 1px */
 @borderWidthM: .125rem;  /* 2px */
 @borderWidthL: .1875rem;  /* 3px */
+@borderWidthXL: .25rem;  /* 4px */
 
 
 /**
@@ -61,3 +62,18 @@
 .border--x--l(@color) { .border--left--l(@color); .border--right--l(@color); }
 
 .border--y--l(@color) { .border--top--l(@color); .border--bottom--l(@color); }
+
+/** @borderWidthXL */
+.border--xl(@color) { border: @borderWidthXL solid @color; }
+
+.border--top--xl(@color) { border-top: @borderWidthXL solid @color; }
+
+.border--right--xl(@color) { border-right: @borderWidthXL solid @color; }
+
+.border--bottom--xl(@color) { border-bottom: @borderWidthXL solid @color; }
+
+.border--left--xl(@color) { border-left: @borderWidthXL solid @color; }
+
+.border--x--xl(@color) { .border--left--xl(@color); .border--right--xl(@color); }
+
+.border--y--xl(@color) { .border--top--xl(@color); .border--bottom--xl(@color); }
