--- a/src/GoalsLogo/GoalsLogo.less
+++ b/src/GoalsLogo/GoalsLogo.less
@@ -8,10 +8,16 @@
 .GoalsLogo--image {
   height: 1em;
   transition: all @timingPromptly ease-out;
+
+  // Required to maintain aspect ratio in IE10. These are measurements from the SVG view box.
+  width: 50em / 23;
 }
 
 .GoalsLogo--image--withClever {
   // Bump up the size-to-height ratio a bit to account for the fact that the "Clever" logo is
   // included in the total height.
   height: 1.5em;
+
+  // Required to maintain aspect ratio in IE10. These are measurements from the SVG view box.
+  width: 53em / 34 * 1.5;
 }
