--- a/components/Example/CodeSample.less
+++ b/components/Example/CodeSample.less
@@ -6,7 +6,7 @@
 }
 
 .Demo--CodeSample--content {
-  max-width: 60rem;
+  max-width: 70rem;
   .border--s(@neutral_silver);
   .borderRadius--bottom--m;
   .text--monospace;
@@ -14,6 +14,7 @@
   background-color: @neutral_off_white;
   border-top: 0;
   box-shadow: inset 0 @size_xs @size_xs -@size_xs fadeout(@neutral_black, 85%);
+  box-sizing: border-box;
   display: block;
   line-height: 1.5;
   margin: 0;
