[TopBar] Make sure all margins and padding are reset on the title.

--- a/src/TopBar/TopBar.less
+++ b/src/TopBar/TopBar.less
@@ -61,8 +61,8 @@
 
 .dewey--TopBar--title {
   .margin--none();
-  .padding--bottom--none();
   .padding--x--s();
+  .padding--y--none();
   .text--medium();
   .text--semi-bold();
   overflow: hidden;
