--- a/src/Menu/Menu.less
+++ b/src/Menu/Menu.less
@@ -14,10 +14,13 @@
   background-color: @neutral_white;
   box-sizing: border-box;
   box-shadow: 0 @size_3xs @size_2xs fade(@neutral_black, 10%);
-  min-width: 100%;
-  overflow: hidden;
+  overflow: auto;
   position: absolute;
   white-space: nowrap;
+}
+
+.Menu--dropdown--wrap {
+  white-space: normal;
 }
 
 .Menu--dropdown--placement--left {
