[TopBar] Override any base title color with primary_blue for consistency

--- a/src/TopBar/TopBar.less
+++ b/src/TopBar/TopBar.less
@@ -64,6 +64,7 @@
   .padding--y--none();
   .text--medium();
   .text--semi-bold();
+  color: @primary_blue;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
